# atomic

./: .gitignore  README.md  package.json  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: release.yml
apps/desktop/: package.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/hooks/: useEntries.ts  useKeyboardNav.ts  useNotifications.ts  useSettings.ts  useUpdater.ts
local/: PLAN.md
scripts/: seed.py  seed_past.ts
